Fix: z-index on nav, prevent cards scrolling above

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,6 +77,7 @@ body {
 
 nav {
     position:fixed;
+    z-index: 1000;
 }
 
 nav a.brand-logo {
